# calculator

./: Cargo.toml  LICENSE  README.md
data/: ebon-calculator.desktop
src/: main.rs  main_state.rs  main_view.rs
src/assets/: calculator.ron
