[package]
name = "calculator"
version = "0.1.0"
authors = ["Evan Maddock <maddock.evan@vivaldi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calculate = {git = "https://gitlab.redox-os.org/redox-os/calc.git", branch = "master"} # Because the last release doesn't build
decimal = { git = "https://github.com/alkis/decimal.git", default-features = false } # Because of `calculate`
iced = "0.3"
