[package]
name = "ebon-calculator"
version = "0.1.0"
authors = ["Evan Maddock <maddock.evan@vivaldi.net>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"

[profile.dev]
opt-level = 1

[features]
debug = ["orbtk/debug"]

[dependencies]
calculate = {git = "https://gitlab.redox-os.org/redox-os/calc.git", branch = "master"} # Because the last release doesn't build
decimal = { git = "https://github.com/alkis/decimal.git", default-features = false } # Because of `calculate`
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch= "develop" }